# pst_scraper

./: LICENSE  README.md  pyproject.toml
src/pst_scraper/: __init__.py  email_enums.py  email_reader.py  pst_reader.py
